--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,35 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+.gradle/
+out/
+**/*.idea/
+build/
+classes/
+**/*.log
+**/*-local.yml
+**/*-local.properties
+**~
+.DS_Store
+**/.DS_Store
+*.iml
+*.ipr
+*.iws
+authentication/.classpath
+authentication/.project
+authentication/.settings/
+authentication/bin/
+integration/.classpath
+integration/.project
+integration/.settings/
+integration/bin/
+.settings/
+.classpath
+.project
+account-management-service/.classpath
+account-management-service/.project
+account-management-service/bin/
+*rebel.xml
+.java-version
+**/generated/
